# librcom

./: .gitignore  CMakeLists.txt  README.md  Roadmap.md  codecov.yml
.github/workflows/: CI.yml
applications/rcdiscover/: CMakeLists.txt
applications/rcdiscover/include/: ISerialPortConfigurationGenerator.h  ISerialPortDiscover.h  ISerialPortIdentification.h  PortConfigurationGenerator.h  SerialPortConfigurationGenerator.h  SerialPortDiscover.h  SerialPortIdentification.h
applications/rcdiscover/src/: PortConfigurationGenerator.cpp  SerialPortConfigurationGenerator.cpp  SerialPortDiscover.cpp  SerialPortIdentification.cpp  main.cpp
applications/rcdiscover/test/: CMakeLists.txt
applications/rcdiscover/test/mocks/: SerialPortDiscover_mock.h
applications/rcdiscover/test/src/: PortConfigurationGenerator_tests.cpp  SerialPortConfigurationGenerator_tests.cpp  SerialPortDiscover_tests.cpp  SerialPortIdentification_tests.cpp
applications/rcom_registry/: CMakeLists.txt  rcom-registry.cpp
applications/rcom_registry/src/: rcom-registry.cpp
cmake_modules/: RomiFunctions.cmake  RomiProjectBuildOptions.cmake
doc/: CMakeLists.txt  HappyMonster.h  IMonster.h  monster_2.cpp  monster_3.cpp
docs/: README.md
examples/: CMakeLists.txt
examples/messagebus/: chat-client.cpp  chat-server.cpp
examples/pubsub-sensor/: publisher.cpp  subscriber.cpp
examples/rpc-hello-world/: client.cpp  server.cpp
examples/rpc-speed-test/: client.cpp  server.cpp
examples/tutorial/: MyLog.h  monster_client.cpp  monster_server.cpp  monster_simple.cpp
librcom/: CMakeLists.txt
librcom/examples/: CMakeLists.txt
librcom/examples/messagebus/: chat-client.cpp  chat-server.cpp
librcom/examples/pubsub-sensor/: publisher.cpp  subscriber.cpp
librcom/examples/rpc-hello-world/: client.cpp  server.cpp
librcom/examples/rpc-speed-test/: client.cpp  server.cpp
librcom/include/: Address.h  BaseSocket.h  ClientSideWebSocket.h  Clock.h  DummyMessageListener.h  Frames.h  HttpParser.h  HttpParserListener.h  IClock.h  IHttpParser.h  IMessageHub.h  IMessageLink.h  IMessageListener.h  IRPCClient.h  IRPCHandler.h  IRegistry.h  IRequest.h  IRequestParser.h  IResponse.h  IResponseParser.h  IServerSocket.h  ISocket.h  ISocketFactory.h  IWebSocket.h  IWebSocketServer.h  IWebSocketServerFactory.h  Linux.h  MemBuffer.h  MessageHub.h  MessageLink.h  RPCClient.h  RPCError.h  RPCServer.h  RawMessageHub.h  Registry.h  RegistryEntry.h  RegistryProxy.h  RegistryServer.h  Request.h  RequestParser.h  (+13 more)
librcom/include/rcom/: Address.h  BaseSocket.h  ClientSideWebSocket.h  ConsoleLog.h  ConsoleLogger.h  DummyMessageListener.h  Frames.h  HttpConstants.h  HttpParser.h  HttpParserListener.h  IAddress.h  IHttpParserListener.h  ILinux.h  ILog.h  IMessageHub.h  IMessageLink.h  IMessageListener.h  IRPCClient.h  IRPCHandler.h  IRPCServer.h  IRegistry.h  IRegistryLookup.h  IRequest.h  IRequestParser.h  IResponse.h  IResponseParser.h  IServerSocket.h  ISocket.h  ISocketFactory.h  ITimer.h  IWebSocket.h  IWebSocketServer.h  IWebSocketServerFactory.h  Linux.h  Log.h  MemBuffer.h  MessageFields.h  MessageHub.h  MessageLink.h  RPCError.h  (+27 more)
librcom/src/: Address.cpp  BaseSocket.cpp  ClientSideWebSocket.cpp  Clock.cpp  ConsoleLog.cpp  ConsoleLogger.cpp  HttpParser.cpp  Linux.cpp  Log.cpp  MemBuffer.cpp  MessageHub.cpp  MessageLink.cpp  RPCClient.cpp  RPCServer.cpp  RawMessageHub.cpp  RcomClient.cpp  RcomMessageHandler.cpp  RcomServer.cpp  Registry.cpp  RegistryEntry.cpp  RegistryLookup.cpp  RegistryLookupServer.cpp  RegistryProxy.cpp  RegistryServer.cpp  RemoteObjectsAdaptor.cpp  RemoteStub.cpp  Request.cpp  RequestParser.cpp  Response.cpp  ResponseParser.cpp  ServerSideWebSocket.cpp  ServerSocket.cpp  Socket.cpp  SocketFactory.cpp  WebSocket.cpp  WebSocketServer.cpp  WebSocketServerFactory.cpp  ip.cpp  sha1.cpp  util.cpp
librcom/test/: CMakeLists.txt
librcom/test/mocks/: Address.mock.h  CMakeLists.txt  Clock.mock.h  Linux.mock.h  Log.mock.h  MessageListener.mock.h  RPCClient.mock.h  RPCHandler.mock.h  Request.mock.h  RequestParser.mock.h  Response.mock.h  ResponseParser.mock.h  ServerSocket.mock.h  Socket.mock.h  SocketFactory.mock.h  WebSocket.mock.h  WebSocketServer.mock.h  WebSocketServerFactory.mock.h  random.mock.c  random.mock.h
librcom/test/src/: MemBuffer_tests.cpp  address_tests.cpp  app_tests.cpp  clientside_websocket_tests.cpp  messagehub_tests.cpp  rawmessagehub_tests.cpp  rcommessagehandler_tests.cpp  registry_tests.cpp  registryproxy_tests.cpp  request_tests.cpp  requestparser_tests.cpp  response_tests.cpp  responseparser_tests.cpp  serverside_websocket_tests.cpp  serversocket_tests.cpp  tests_main.cpp  util_tests.cpp  websocket_tests.cpp  websocketserver_tests.cpp
python/: .gitignore  client.py  demo.py  registry.py  requirements.txt  setup.py
python/examples/: monster_client.py
python/rcom/: rcom_client.py
